src/styles/app.css
/* ... */
h3 {
  margin: 1.5em 0 0.5em 0;
  font-size: 1.8rem;
  font-weight: 500;
}
@media (max-width: 680px) {
  h3 {
    font-size: 1.7rem;
  }
}

h4 {
  margin: 1.5em 0 0.5em 0;
  font-size: 1.6rem;
  font-weight: 500;
}

h5 {
  margin: 1.5em 0 0.5em 0;
  font-size: 1.4rem;
  font-weight: 500;
}

h6 {
  margin: 1.5em 0 0.5em 0;
  font-size: 1.4rem;
  font-weight: 500;
}

/* Layout
/* ---------------------------------------------------------- */

/* Spacing */
.spacing-v-sm{
  padding: var(--padding-v-sm) 0;
}
.spacing-v-md {
  padding: var(--padding-v-md) 0;
}
.spacing-v-lg {
  padding: var(--padding-v-lg) 0;
}
.spacing-h-sm {
  padding: 0 var(--padding-h-sm);
}
.spacing-h-md {
  padding: 0 var(--padding-h-md);
}
.spacing-h-lg {
  padding: 0 var(--padding-h-lg);
}
.spacing-sm {
  padding: var(--padding-v-sm);
}
.spacing-md {
  padding: var(--padding-v-md);
}
.spacing-lg {
  padding: var(--padding-v-lg);
}
.max-width {
  margin: 0 4%;
}

@media (min-width: 37.5em) {
  .max-width {
    margin: 0 8%;
  }
}
@media (min-width: 48em) {
  .max-width {
    margin: 0 12%;
  }
}
@media (min-width: 60em) {
  .max-width {
    margin: 0 14%;
  }
}

.max-width-70 {
  max-width: 70%;
}
.text-align-center{
  text-align: center;
}
/* Flex */
.flex{
  display: flex;
}
.flex-column{
  flex-direction: column;
}
.flex-center-vertical{
  align-items: center;
}
.flex-start{
  justify-content: start;
}
.flex-center-horizontal{
  justify-content: center;
}
.flex-space-evenly{
  justify-content: space-evenly;
}
.flex-space-around {
  justify-content: space-around;
}
.flex-space-between {
  justify-content: space-between;
}
.flex-wrap{
  flex-wrap: wrap;
}
.flex-grow-one{
  flex-grow: 1;
}
/* Grid */
.grid-primary{
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 10px;
}

@media(max-width: 65em) {
  .grid-primary {
    grid-template-columns: repeat(2, 1fr)
  }
}

@media(max-width: 48em) {
  .grid-primary {
    grid-template-columns: repeat(1, 1fr)
  }
}

@media(max-width: 60em) {
  .grid-secondary {
    grid-template-columns: repeat(1, 1fr)
  }
}
.grid-secondary {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 10px;
}

@media(max-width: 60em){
  .grid-secondary {
    grid-template-columns: 1fr;
  }
}

/* Components */

/* Header
/* ---------------------------------------------------------- */
.site-banner {
  display: flex;
  justify-content: center;
  align-items: center;
  /* tame the gatsby image */
  padding: 0 200px;
}

@media(min-width: 20em){
.site-banner{
    padding: 0 ;
  }
}
.site-banner>* {
  flex-grow: 1;
}

.footer {
  border-top: 3px var(--color-light-grey) solid;
  background: var(--color-light-green);
}
.header{
  border-bottom: 3px var(--color-light-grey) solid;
  background: var(--color-light-green);
}
.header a{
  /* font-size: var(--font-small); */
  font-weight: var(--font-bold);
  padding: 5px 10px;
}
.footer a, .header a{
  opacity: 0.8;
}
.header a:hover{
  text-decoration: underline white solid 2px;
  opacity: 1;
}
.footer a:hover {
  text-decoration: underline white solid 2px;
  opacity: 1;
}
.footer-rights-reserved {
  color: var(--color-white);
  font-weight: var(--font-light);
}
.footer-rights-reserved-container{
  padding-top: 2em;
}
.button-primary{
  outline: none;
  font: var(--font-medium);
  border: 2px var(--color-light-grey) solid;
  border-radius: 0.5rem;
  font-weight: var(--font-light);
  background: var(--color-white);
  opacity: 0.7;
  color: var(--color-black);
  padding: 0.5rem 5rem;
}
.button-primary:active {
  border: 2px solid var(--color-light-green);
}
.button-primary:hover {
  opacity: 1;
  cursor: pointer;
}
.button-primary:focus {
  border: 2px solid var(--color-light-green);
}
.card{
  border-radius: 0.25em;
  border: 2px var(--color-light-grey) solid;
  overflow: scroll;
}
.card-title{
  padding:0;
  margin:0 0 10px 0;
}
.card-description{
  padding:0;
  margin:0;
  font-weight: var(--font-light);
}
.text-emphasis{
  font-weight: var(--font-bold);
  color: var(--color-off-white);
}
.darken{
  color: var(--color-light-green)
}

/* Necessary otherwise table doesnt fit on smaller screens
(with this you can scroll horizontally) */
.table-wrapper {
  overflow-x: auto;
  overflow-x: scroll;
  white-space: nowrap;
}

@media (max-width: 665px) {
  .table-wrapper {
    width: 400px;
  }
}

table {
  border-collapse: collapse;
  margin: 25px 0;
  box-shadow: 20px var(--color-black);
  text-align: left;
  border-radius: 10px;
  display: inline-block;
  overflow-x: auto;
  max-width: 100%;
  border: 0;
}

thead tr {
  background-color: var(--color-med-grey);
  color: var(--color-white);
  text-align: left;
  font-weight: bold;
}

th,
td {
  padding: 12px 15px;
}

tbody tr {
  border-bottom: thin solid var(--color-med-grey);
  border-radius: 10px;
}

tbody tr:nth-of-type(even) {
  background-color: var(--color-off-white)
}

tbody tr:last-of-type {
  border-bottom: 2px solid var(--color-off-white);
}

